--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -19,4 +19,9 @@
         android:id="@+id/action_logout"
         android:title="Logout"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_profile"
+        android:title="Profile"
+        app:showAsAction="never" />
 </menu>
